[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/tres folder/font_for_display.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/main_board.gd" type="Script" id=2]
[ext_resource path="res://scenes/card_sample/cards_kinematic.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/360_F_267112986_Pm82f8DJQXtyETYqmZd2dnSicXiGKxYa.jpg" type="Texture" id=4]
[ext_resource path="res://assets/images/suits/SuitSpades.svg" type="Texture" id=5]
[ext_resource path="res://assets/images/suits/SuitClubs.svg" type="Texture" id=6]
[ext_resource path="res://assets/images/suits/SuitDiamonds.svg" type="Texture" id=7]
[ext_resource path="res://assets/images/suits/SuitHearts.png" type="Texture" id=8]
[ext_resource path="res://assets/tres folder/suit_deck.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/fonts/Galindo-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/images/undo.png" type="Texture" id=11]
[ext_resource path="res://assets/tres folder/font.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/images/redeck.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=5]
size = 19
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 52.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43, 53.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 43, 52 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 43, 55 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 39.4688, 57.1875 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 39.125, 56.7812 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 38.8125, 57.5312 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 38.875, 57.0938 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 38.875, 57.375 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 39.8125, 57.5625 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 39.625, 58.0625 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.243137, 0.243137, 0.243137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.956863, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.219608, 0.74902, 0.188235, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="CanvasItemMaterial" id=18]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=19]
blend_mode = 1

[node name="BoardControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
card_scene = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="GameControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameControl"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="StatsControl" type="Control" parent="GameControl/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 74 )
mouse_filter = 2

[node name="StatsHBox" type="HBoxContainer" parent="GameControl/VBoxContainer/StatsControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -6.0
mouse_filter = 2
custom_constants/separation = 150
alignment = 1

[node name="NewGameTextureButton" type="Button" parent="GameControl/VBoxContainer/StatsControl/StatsHBox"]
margin_left = 92.0
margin_right = 207.0
margin_bottom = 74.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 5 )
text = "New Game"
flat = true

[node name="TimeVBox" type="VBoxContainer" parent="GameControl/VBoxContainer/StatsControl/StatsHBox"]
margin_left = 357.0
margin_right = 414.0
margin_bottom = 74.0
mouse_filter = 2

[node name="TimeLabel" type="Label" parent="GameControl/VBoxContainer/StatsControl/StatsHBox/TimeVBox"]
margin_right = 57.0
margin_bottom = 35.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Time"
align = 1

[node name="TimeNumberLabel" type="Label" parent="GameControl/VBoxContainer/StatsControl/StatsHBox/TimeVBox"]
margin_top = 39.0
margin_right = 57.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="GameTimeTimer" type="Timer" parent="GameControl/VBoxContainer/StatsControl/StatsHBox/TimeVBox"]

[node name="MovesVBox" type="VBoxContainer" parent="GameControl/VBoxContainer/StatsControl/StatsHBox"]
margin_left = 564.0
margin_right = 645.0
margin_bottom = 74.0
mouse_filter = 2

[node name="MovesLabel" type="Label" parent="GameControl/VBoxContainer/StatsControl/StatsHBox/MovesVBox"]
margin_right = 81.0
margin_bottom = 35.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Moves"
align = 1
valign = 1

[node name="MovesNumberLabel" type="Label" parent="GameControl/VBoxContainer/StatsControl/StatsHBox/MovesVBox"]
margin_top = 39.0
margin_right = 81.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1

[node name="ScoreVBox" type="VBoxContainer" parent="GameControl/VBoxContainer/StatsControl/StatsHBox"]
margin_left = 795.0
margin_right = 871.0
margin_bottom = 74.0
mouse_filter = 2

[node name="ScoreLabel" type="Label" parent="GameControl/VBoxContainer/StatsControl/StatsHBox/ScoreVBox"]
margin_right = 76.0
margin_bottom = 35.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Score"

[node name="ScoreNumberLabel" type="Label" parent="GameControl/VBoxContainer/StatsControl/StatsHBox/ScoreVBox"]
margin_top = 39.0
margin_right = 76.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1

[node name="HomeButton" type="Button" parent="GameControl/VBoxContainer/StatsControl/StatsHBox"]
margin_left = 1021.0
margin_right = 1108.0
margin_bottom = 74.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 1 )
text = "HOME"
flat = true

[node name="TableauControl" type="Control" parent="GameControl/VBoxContainer"]
margin_top = 78.0
margin_right = 1200.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 462 )
mouse_filter = 2

[node name="DiamondsSuit" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 1112, 50 )
input_pickable = false

[node name="DiamondPanel" type="Panel" parent="GameControl/VBoxContainer/TableauControl/DiamondsSuit"]
margin_left = -17.0
margin_top = -30.0
margin_right = 33.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 75 )
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="GameControl/VBoxContainer/TableauControl/DiamondsSuit/DiamondPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -24.5
margin_right = 22.0
margin_bottom = 24.5
mouse_filter = 2
texture = ExtResource( 7 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/DiamondsSuit"]
visible = false
position = Vector2( 9, 6.5 )
shape = SubResource( 1 )

[node name="SpadeSuit" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 1114, 160 )
input_pickable = false

[node name="SpadePanel" type="Panel" parent="GameControl/VBoxContainer/TableauControl/SpadeSuit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -21.0
margin_top = -28.0
margin_right = 37.0
margin_bottom = 48.0
rect_min_size = Vector2( 50, 75 )
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="GameControl/VBoxContainer/TableauControl/SpadeSuit/SpadePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -24.5
margin_right = 22.0
margin_bottom = 24.5
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/SpadeSuit"]
visible = false
position = Vector2( 8, 6.5 )
shape = SubResource( 2 )

[node name="ClubsSuit" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 1114, 272 )
input_pickable = false

[node name="ClubsPanel" type="Panel" parent="GameControl/VBoxContainer/TableauControl/ClubsSuit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -31.0
margin_right = 37.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 75 )
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="GameControl/VBoxContainer/TableauControl/ClubsSuit/ClubsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -24.5
margin_right = 22.0
margin_bottom = 24.5
mouse_filter = 2
texture = ExtResource( 6 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/ClubsSuit"]
visible = false
position = Vector2( 8, 5 )
shape = SubResource( 3 )

[node name="HeartsSuit" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 1113, 382 )
input_pickable = false

[node name="HeartsPanel" type="Panel" parent="GameControl/VBoxContainer/TableauControl/HeartsSuit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -29.0
margin_right = 36.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 75 )
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="GameControl/VBoxContainer/TableauControl/HeartsSuit/HeartsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -24.5
margin_right = 22.0
margin_bottom = 24.5
mouse_filter = 2
texture = ExtResource( 8 )
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/HeartsSuit"]
visible = false
position = Vector2( 8, 7 )
shape = SubResource( 4 )

[node name="column1" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 282, 66 )
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/column1"]
visible = false
position = Vector2( 6.53122, 8.8125 )
shape = SubResource( 6 )

[node name="column2" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 387, 66 )
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/column2"]
visible = false
position = Vector2( 5.875, 9.21875 )
shape = SubResource( 7 )

[node name="column3" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 490, 66 )
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/column3"]
visible = false
position = Vector2( 7.1875, 8.46875 )
shape = SubResource( 8 )

[node name="column4" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 595, 66 )
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/column4"]
visible = false
position = Vector2( 6.125, 8.90625 )
shape = SubResource( 9 )

[node name="column5" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 700, 66 )
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/column5"]
visible = false
position = Vector2( 5.125, 8.625 )
shape = SubResource( 10 )

[node name="column6" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 802, 66 )
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/column6"]
visible = false
position = Vector2( 6.1875, 8.4375 )
shape = SubResource( 11 )

[node name="column7" type="Area2D" parent="GameControl/VBoxContainer/TableauControl"]
position = Vector2( 910, 66 )
collision_layer = 3
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameControl/VBoxContainer/TableauControl/column7"]
visible = false
position = Vector2( 2.375, 7.9375 )
shape = SubResource( 12 )

[node name="DealButton" type="TextureButton" parent="GameControl"]
margin_left = 50.0
margin_top = 99.0
margin_right = 121.0
margin_bottom = 197.0
rect_min_size = Vector2( 56, 80 )
mouse_default_cursor_shape = 2
expand = true

[node name="Panel" type="Panel" parent="GameControl/DealButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.5
margin_top = -48.0
margin_right = 33.5
margin_bottom = 46.0
mouse_filter = 2
custom_styles/panel = SubResource( 21 )

[node name="TextureRect" type="TextureRect" parent="GameControl/DealButton/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -45.0
margin_right = 29.5
margin_bottom = 46.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true

[node name="UndoButton" type="Button" parent="GameControl"]
anchor_left = 0.107
anchor_top = 0.881
anchor_right = 0.107
anchor_bottom = 0.881
margin_left = -32.4
margin_top = -27.74
margin_right = 31.6
margin_bottom = 28.26
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
icon = ExtResource( 11 )
flat = true
expand_icon = true

[node name="CanvasLayer" type="CanvasLayer" parent="GameControl"]
layer = 25

[node name="PopupDialog" type="PopupDialog" parent="GameControl/CanvasLayer"]
margin_left = 182.0
margin_top = 435.0
margin_right = 630.0
margin_bottom = 492.0
mouse_filter = 2
custom_styles/panel = SubResource( 16 )
popup_exclusive = true

[node name="Label" type="Label" parent="GameControl/CanvasLayer/PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 12 )
text = "Nothing left to undo"
align = 1
valign = 1

[node name="PopupTimer" type="Timer" parent="GameControl"]

[node name="AfterGameControl" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="WindowDialog" type="WindowDialog" parent="AfterGameControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -220.0
margin_right = 380.0
margin_bottom = 220.0
custom_styles/panel = SubResource( 17 )

[node name="Label" type="Label" parent="AfterGameControl/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -191.0
margin_right = 160.0
margin_bottom = -141.0
custom_fonts/font = ExtResource( 12 )
text = "You have Won !!!"
uppercase = true

[node name="EasyButton" type="Button" parent="AfterGameControl/WindowDialog"]
material = SubResource( 18 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -20.5
margin_right = -134.0
margin_bottom = 20.5
custom_fonts/font = ExtResource( 1 )
text = "EASY"

[node name="HardButton" type="Button" parent="AfterGameControl/WindowDialog"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 19 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 161.0
margin_top = -20.5
margin_right = 244.0
margin_bottom = 20.5
custom_fonts/font = ExtResource( 1 )
text = "HARD"

[node name="Label2" type="Label" parent="AfterGameControl/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -71.0
margin_right = 102.0
margin_bottom = -36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "PLAY AGAIN???"

[node name="CancelButton" type="Button" parent="AfterGameControl/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = 105.0
margin_right = 73.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 1 )
text = "CANCEL"

[node name="Label3" type="Label" parent="AfterGameControl/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -119.0
margin_right = 29.0
margin_bottom = -84.0
custom_fonts/font = ExtResource( 1 )
text = "Your Score :"

[node name="ScoreLabel" type="Label" parent="AfterGameControl/WindowDialog"]
margin_left = 425.0
margin_top = 101.0
margin_right = 465.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 1 )

[connection signal="pressed" from="GameControl/VBoxContainer/StatsControl/StatsHBox/NewGameTextureButton" to="." method="_on_NewGameTextureButton_pressed"]
[connection signal="timeout" from="GameControl/VBoxContainer/StatsControl/StatsHBox/TimeVBox/GameTimeTimer" to="." method="_on_GameTimeTimer_timeout"]
[connection signal="pressed" from="GameControl/VBoxContainer/StatsControl/StatsHBox/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/DiamondsSuit" to="." method="_on_DiamondsSuit_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/SpadeSuit" to="." method="_on_SpadeSuit_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/ClubsSuit" to="." method="_on_ClubsSuit_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/HeartsSuit" to="." method="_on_HeartsSuit_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/column1" to="." method="_on_column1_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/column2" to="." method="_on_column2_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/column3" to="." method="_on_column3_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/column4" to="." method="_on_column4_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/column5" to="." method="_on_column5_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/column6" to="." method="_on_column6_body_entered"]
[connection signal="body_entered" from="GameControl/VBoxContainer/TableauControl/column7" to="." method="_on_column7_body_entered"]
[connection signal="pressed" from="GameControl/DealButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GameControl/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="timeout" from="GameControl/PopupTimer" to="." method="_on_PopupTimer_timeout"]
[connection signal="pressed" from="AfterGameControl/WindowDialog/EasyButton" to="." method="_on_EasyButton_pressed"]
[connection signal="pressed" from="AfterGameControl/WindowDialog/HardButton" to="." method="_on_HardButton_pressed"]
[connection signal="pressed" from="AfterGameControl/WindowDialog/CancelButton" to="." method="_on_CancelButton_pressed"]
